--- a/client/src/style/SocketEditor.css
+++ b/client/src/style/SocketEditor.css
@@ -9,7 +9,7 @@
     height: 100%;
     resize: none;
     border-radius: 3px;
-    border: solid 1px #aaa;
+    border: solid 1px #ccc;
     box-sizing: border-box;
 }
 
